--- a/legacy/20250921-193220/css/layout.css
+++ b/legacy/20250921-193220/css/layout.css
@@ -330,6 +330,7 @@ html, body {
 :root {
   --term: #E0CB10;
   --gear: #38A0BD;
+}
 
 .page {
   display: grid;
@@ -402,10 +403,10 @@ html, body {
   overflow: hidden;
 }
 
-#room > canvas {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
+#experience-canvas {
+  position:absolute; 
+  inset:0; 
+  width:100%; 
+  height:100%; 
+  display:block; 
 }
